# Server-Device-Placement

./: CMakeLists.txt  README.md
libs/kdtree/: CMakeLists.txt
libs/kdtree/include/: nearestResult.hpp  node.hpp  pointInfo.hpp  sorted_kdtree.hpp
libs/kdtree/src/: sorted_kdtree.cpp
src/: main.cpp
src/routes/: TreeRoutes.h
